k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: safa-hawa
  labels:
    app.kubernetes.io/name: safa-hawa
    app.kubernetes.io/part-of: air-quality
